--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,6 +9,24 @@
     android:orientation="vertical"
     tools:context=".MainActivity">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <EditText
+            android:id="@+id/editPlayerName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="4"
+            android:hint="@string/editPlayerName"/>
+        <Button
+            android:id="@+id/updatePlayerNameBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/updatePlayerNameTxt"/>
+    </LinearLayout>
+
     <TextView
         android:id="@+id/playerName"
         style="@style/NameStyle"
@@ -37,6 +55,24 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:text="@string/rollDice" />
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" >
+
+            <TextView
+                android:id="@+id/rulesTextView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="@string/rulesTxt"
+                style="@style/NameStyle"/>
+        </LinearLayout>
+    </ScrollView>
 
 
 </LinearLayout>
